Fix VrShellNavigationTests

These tests were flakily broken by a recent change to introduce a mojo
interface where a C++ interface once was.  During destruction, there was
a race between an async mojo binding error vs. GvrDevice destruction.

If GvrDevice is destroyed too early, we don't get the disconnect message
and the GvrDelegate is never told that we have exited presentation.

The fix is to check whether we are presenting in GvrDevice's destructor,
and treat destruction as another signal to stop presentation.

TBR=mthiesse,bsheedy

Bug: 859217
Change-Id: I0c47da28d4c61ad44839d0b3c1dff1240d2e034d
Reviewed-on: https://chromium-review.googlesource.com/1121624
Reviewed-by: Bill Orr <billorr@chromium.org>
Commit-Queue: Bill Orr <billorr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571756}
Former-commit-id: fe2358a95eaf5dbe2ac82198009795ff4bf2c33c